update HTML example

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,11 +21,11 @@
     </li>
   </ul>
   <a href="https://www.pathsomewhere.com">Link</a>
-  <p style="color:blueviolet;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo reiciendis accusamus
-    animi
-    nesciunt possimus
-    excepturi, officia est ab enim repellat dignissimos corrupti deleniti? Dignissimos blanditiis ad maxime excepturi
-    asperiores praesentium!</p>
+  <p style="color:blueviolet;">Praesent in mauris eu tortor porttitor accumsan. Integer vulputate sem a nibh rutrum
+    consequat. Phasellus faucibus molestie nisl. Nullam at arcu a est sollicitudin euismod. Aliquam in lorem sit amet
+    leo accumsan lacinia. Aenean fermentum risus id tortor. Integer lacinia. Duis ante orci, molestie vitae vehicula
+    venenatis, tincidunt ac pede. Aliquam id dolor. Duis risus. Maecenas aliquet accumsan leo. Cum sociis natoque
+    penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 </body>
 
 </html>
